k8s/sddbook-com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sddbook-com
  namespace: sddbook-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sddbook-com
  template:
    metadata:
      labels:
        app: sddbook-com
    spec:
      containers:
        - name: sddbook-com
          image: kevinryanacr.azurecr.io/sddbook-com:dev
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 8Mi
            limits:
              cpu: 50m
              memory: 32Mi
