k8s/sddbook-com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sddbook-com
  namespace: sddbook-com
spec:
  selector:
    app: sddbook-com
  ports:
    - port: 80
      targetPort: 8080
