k8s/sddbook-com/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sddbook-com
  namespace: sddbook-com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sddbook.com`) || Host(`www.sddbook.com`)
      kind: Rule
      services:
        - name: sddbook-com
          port: 80
  tls: {}
